Updated About page

--- a/code/Android/app/src/main/assets/about.html
+++ b/code/Android/app/src/main/assets/about.html
@@ -5,9 +5,19 @@
         <title>About SkyeTracker</title>
     </head>
     <body>
-        <h1>SkyeTracker (version 2.4.0)</h1>
-        <h3>An open source app developed by <a href="http://ca.linkedin.com/in/rossconsulting" target="_blank">Graham Ross</a>.</h3>
+        <h2>SkyeTracker (version 2.5.0)</h2>
+        <p>
+            <h5>If you find this app useful, please help support further development!
+                <a  href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=graham.a.ross%40gmail.com&item_name=Support+SkyeTracker+development&currency_code=USD&source=url" target="_blank">
+                    <p><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" alt="Paypal" width="140" height="50"></p>
+                </a>
+            </h5>
+        </p>
+        <p>The source code is hosted and available on <a href="https://github.com/classicdiy/SkyeTracker" target="_blank">github</a>.</p>
+        <p>
+            Please refer to the <a href="https://github.com/ClassicDIY/SkyeTracker/wiki">Classic wiki</a> for more information.
+        </p>
 
-        <p>This app is open source and licensed under the Apache License V2.0 , the source code is hosted and available on <a href="https://github.com/graham22/SkyeTracker" target="_blank">github</a>.</p>
+        <p>This app is open source and licensed under the Apache License V2.0.</p>
     </body>
 </html>
