Removed Paypal link in about tab

--- a/code/Android/app/src/main/assets/about.html
+++ b/code/Android/app/src/main/assets/about.html
@@ -5,12 +5,10 @@
         <title>About SkyeTracker</title>
     </head>
     <body>
-        <h2>SkyeTracker (version 2.5.1)</h2>
+        <h2>SkyeTracker (version 2.5.3)</h2>
         <p>
-            <h5>If you find this app useful, please help support further development!
-                <a  href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=graham.a.ross%40gmail.com&item_name=Support+SkyeTracker+development&currency_code=USD&source=url" target="_blank">
-                    <p><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" alt="Paypal" width="140" height="50"></p>
-                </a>
+            <h5>
+            <a href="https://www.buymeacoffee.com/r4K2HIB" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
             </h5>
         </p>
         <p>The source code is hosted and available on <a href="https://github.com/classicdiy/SkyeTracker" target="_blank">github</a>.</p>
