--- a/code/ESP32/data/Tracker.htm
+++ b/code/ESP32/data/Tracker.htm
@@ -1,7 +1,6 @@
 #pragma once
 
 const char validate_script[] PROGMEM = R"rawliteral(
-  <script>
   function validateElevationBounds(data) {
     const minEl = data._minimumElevation;
     const maxEl = data._maximumElevation;
@@ -9,17 +8,14 @@ const char validate_script[] PROGMEM = R"rawliteral(
       throw new Error('Minimum elevation must be ≤ maximum elevation.');
     }
   }
-  </script>
 )rawliteral";
 
 const char onLoadScript[] PROGMEM = R"rawliteral(
-  <script>
     const now = new Date();
     const _date = document.getElementById('_date');
     const _time = document.getElementById('_time');
     _date.value = now.toISOString().split('T')[0];
     _time.value = now.toTimeString().slice(0,5);
-  </script>
 )rawliteral";
 
 const char home_html[] PROGMEM = R"rawliteral(
@@ -29,7 +25,7 @@ const char home_html[] PROGMEM = R"rawliteral(
 <head>
   <meta name=\"viewport\" content=\"width=device-width, initial-scale=1, user-scalable=no\" />
   <title>{n}</title>
-
+  <link rel="stylesheet" href="/style.css">
   <script>
 
   window.onload = function() {
